# Agentic_AI_team

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: agent-roster.md  workflow.md
examples/: wear-edge-context.md
src/wearedge_agent_team/: __init__.py  cli.py  definitions.py  evidence.py  llm.py  models.py  team.py
tests/: test_team.py
