[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wearedge-agent-team"
version = "0.1.0"
description = "AI-native nine-agent founder team for WearEdge Pro."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ryan Hui" }
]
dependencies = []

[project.scripts]
wearedge-team = "wearedge_agent_team.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
